--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 			<version>2.5.4</version>
 		</dependency>
 
+		<properties>
+		  	<sonar.organization>safetypin-official</sonar.organization>
+		 	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		</properties>
+
 	</dependencies>
 
 	<build>
